@@ -14,6 +14,7 @@ Version 1.0.2 to be released
 - New #92: Empty error messages in models are handled better when being displayed (Qiang)
 - New #93: Changed CLinkPager and CListPager so that the messages are internationalized (Qiang)
 - New #95: Added an option to CHtml::activeCheckBox() to define default value if unchecked (Qiang)
+- New #104: Added support to encode traversable objects using JSON (Qiang)
 - New: Added CActiveRecord::getRelated() (Qiang)
 - New: Added 'return' option to HTML options in CHtml (Qiang)
 - New: Refactored CSS-dependent widgets by adding registerCssFile static methods (Qiang)
